refactor: rename database

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,6 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     environment:
-      POSTGRES_DB: purchases
+      POSTGRES_DB: fsm
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 123456789
