--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=3000
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/purchases
+spring.datasource.url=jdbc:postgresql://localhost:5432/fsm
 spring.datasource.username=postgres
 spring.datasource.password=123456789
 
