--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,12 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/fsm
 spring.datasource.username=postgres
 spring.datasource.password=123456789
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
+
+spring.flyway.url=jdbc:postgresql://localhost:5432/fsm
+spring.flyway.user=postgres
+spring.flyway.password=123456789
