--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
-server.port=3000
+server.port=3333
+
+
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/fsm
 spring.datasource.username=postgres
 spring.datasource.password=123456789
+spring.jackson.default-property-inclusion=non_null
 
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=validate
